k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: secure-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: secure-app

  template:
    metadata:
      labels:
        app: secure-app

    spec:
      serviceAccountName: secure-app-sa
      containers:
        - name: secure-app

          image: secure-app:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8081
