k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: secure-app-service

spec:
  selector:
    app: secure-app

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081

  type: NodePort
