k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-localstack

spec:
  podSelector:
    matchLabels:
      app: secure-app

  policyTypes:
    - Egress

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
